--- a/GoodAsOldPhones/GoodAsOldPhones/Base.lproj/Main.storyboard
+++ b/GoodAsOldPhones/GoodAsOldPhones/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,20 +23,27 @@
                                 <frame key="frameInset" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1937 Desk Phone" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uBA-N5-yky">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="1937 Desk Phone" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uBA-N5-yky">
                                 <frame key="frameInset" minX="16" minY="123" width="343" height="52"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="DamascusBold" family="Damascus" pointSize="24"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B5d-EC-36o">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B5d-EC-36o">
                                 <frame key="frameInset" minX="81" minY="209" width="212" height="41"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="button-addtocart"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="zmp-Gs-LIm" firstAttribute="top" secondItem="B5d-EC-36o" secondAttribute="bottom" constant="417" id="7Pp-Kg-T9S"/>
+                            <constraint firstItem="B5d-EC-36o" firstAttribute="leading" secondItem="vh3-q9-6ru" secondAttribute="leadingMargin" constant="65" id="AJP-qG-Qgd"/>
+                            <constraint firstItem="uBA-N5-yky" firstAttribute="leading" secondItem="vh3-q9-6ru" secondAttribute="leadingMargin" id="FaJ-vb-1NP"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="B5d-EC-36o" secondAttribute="trailing" constant="66" id="QDc-lw-ljo"/>
+                            <constraint firstItem="B5d-EC-36o" firstAttribute="top" secondItem="uBA-N5-yky" secondAttribute="bottom" constant="34" id="hfS-ib-Pv5"/>
+                            <constraint firstItem="uBA-N5-yky" firstAttribute="trailing" secondItem="vh3-q9-6ru" secondAttribute="trailingMargin" id="jXJ-MR-17R"/>
+                            <constraint firstItem="uBA-N5-yky" firstAttribute="top" secondItem="KuZ-3Q-ewz" secondAttribute="bottom" constant="103" id="mCJ-e3-TvY"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DYy-Gv-IqA" userLabel="First Responder" sceneMemberID="firstResponder"/>
