adicionada propriedade do storyboard no viewcontroller da ratingControl class

--- a/FoodTracker/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/FoodTracker/Base.lproj/Main.storyboard
@@ -69,6 +69,7 @@
                         <outlet property="mealNameLabel" destination="bY4-yX-wDR" id="W70-l9-2Oh"/>
                         <outlet property="nameTextField" destination="t0l-E6-gNO" id="rAX-Jh-TAh"/>
                         <outlet property="photoImageView" destination="0Mv-Lz-8Lg" id="l3z-n3-btl"/>
+                        <outlet property="ratingControl" destination="SvY-5a-h9B" id="rqt-i8-uYO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
